[package]
name = "tetris"
version = "0.1.0"
# https://github.com/bevyengine/bevy/issues/3205#issuecomment-980637677
edition = "2021"
authors = ["Ziloka <50429450+ziloka@users.noreply.github.com>"]

[dependencies]
# bevy = { version = "0.8.0", features = ["dynamic"] }
bevy = { version = "0.9" }
rand = { version = "0.8" }

# https://bevy-cheatbook.github.io/platforms/wasm.html
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
